# slate-logger

./: .gitignore  CHANGELOG.md  Makefile  README.md  manifest.json  pyproject.toml
src/cowpy/: .cowpyrc  __init__.py  __main__.py  color.py  common.py  cowpy.py  logger.py
src/slate/: .slaterc  __init__.py  slate.py
tests/: .cowpyrc  .slaterc  test.py
tests/blankconfig/: blank.py
tests/testsubfolder/: .cowpyrc  another.py
tests/testsubfolder/blankconfig/: blank.py
