[project]
name = "cowpy"
version = "v0.0.2"
authors = [
  { name="Tim Palko", email="tim@palkosoftware.com" },
]
description = "Actually simplifying the process of logging in python, with color"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tpalko/cowpy"
"TestPyPI" = "https://test.pypi.org/project/cowpy"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
